# gse

./: .gitignore  CMakeLists.txt  GSEConfig.cmake.in  GSEConfigVersion.cmake.in  LICENSE  README.md
GSE/: CMakeLists.txt  DiracDistribution.h  Distributions.h  GSEConfig.cmake.in  GSEDefs.h  Gaussian.h  LS.h  ManifoldUtil.h  PoseManifold2D.h  PoseManifold3D.h  PoseManifold3DGPS.h  RecBayes.h  SqrtGaussian.h  ThreadPool.h  config.h.in  eigen.h
GSE/LS/: ConstraintRef.h  ConstraintTraits.h  GenericAbsConstraint.h  LSProblem.h  LSProblem11.h  NonlinearEstimator.h  NumDiff.h  RandomVariable.h  WrappedConstraint.h
GSE/RecBayes/: ParticleDistribution.h  ParticleFilter.h  SqrtUKFManifold.h  UKF.h  Unscented.h
samples/: CMakeLists.txt
samples/fitLineSample/: CMakeLists.txt  FitLineSample.cpp  FitLineSample.h  main.cpp
